Manifests/SidecarDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidecar-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sidecar
  template:
    metadata:
      labels:
        app: sidecar
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
      - name: logger
        image: logger:latest
        volumeMounts:
        - name: log-volume
          mountPath: /var/log/nginx
      - name: writer
        image: writer:latest
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: log-volume
        hostPath:
          path: /var/log/nginx
      - name: html-volume
        hostPath:
          path: /usr/share/nginx/html
