Manifests/AdvancedIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - my-ingress.example.com
    secretName: my-tls-secret
  rules:
  - host: my-ingress.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-service
          servicePort: 80
      - path: /api
        backend:
          serviceName: my-api-service
          servicePort: 8080
  - host: my-ingress.example.com
    http:
      paths:
      - path: /admin
        backend:
          serviceName: my-admin-service
          servicePort: 9000
